新增日志模块；

--- a/cloud-platform-module/pom.xml
+++ b/cloud-platform-module/pom.xml
@@ -31,6 +31,7 @@
         <module>cloud-platform-auth</module>
         <module>cloud-platform-minio</module>
         <module>cloud-platform-mybatis-flex</module>
+        <module>cloud-platform-log</module>
     </modules>
 
     <dependencies>
