--- a/cloud-platform-produce/pom.xml
+++ b/cloud-platform-produce/pom.xml
@@ -40,6 +40,12 @@
             <artifactId>cloud-platform-auth</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <!-- 日志服务 -->
+        <dependency>
+            <groupId>com.maxinhai</groupId>
+            <artifactId>cloud-platform-log</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
