--- a/cloud-platform-algorithm/pom.xml
+++ b/cloud-platform-algorithm/pom.xml
@@ -19,6 +19,18 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.maxinhai</groupId>
+            <artifactId>cloud-platform-mongodb</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.maxinhai</groupId>
+            <artifactId>cloud-platform-connector</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
         <!-- 替换原来的spring-retry依赖 -->
         <dependency>
             <groupId>org.springframework.retry</groupId>
@@ -29,6 +41,12 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-aspects</artifactId>
+        </dependency>
+
+        <!-- MongoDB核心依赖 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
         </dependency>
     </dependencies>
 
