提交消息队列报文模型；

--- a/cloud-platform-data-reporting/pom.xml
+++ b/cloud-platform-data-reporting/pom.xml
@@ -31,7 +31,13 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <optional>true</optional>
+            <version>${lomok.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>${hutool.version}</version>
         </dependency>
 
         <!-- 测试依赖 -->
